# MessageWorkerPool

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  MessageWorkerPool.sln  README.md  docker-compose.yml  gitattributes
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/workflows/: build-examples.yml  codecov.yml  codeql-analysis.yml  dotnet.yml  dotnet_build.yml  github_rel.yml  integration_test.yml
benchmarks/MessageWorkerPool.Benchmarks/: MessageWorkerPool.Benchmarks.sln
env/: .env  .local_env
examples/dotnet_examples/: Dockerfile
examples/python_examples/: dockerfile
examples/rust_examples/: dockerfile
examples_worker/dotnet/: Dockerfile
examples_worker/python/: dockerfile
examples_worker/rust/: WorkerSample.sln  dockerfile
examples_worker/rust/ClientSample/: Cargo.toml
examples_worker/rust/ClientSample/src/: main.rs
monitoring/: otel-collector-config.yaml  prometheus.yml
release_note/: release.0.0.0.12.md  release.0.0.0.13.md  release.0.0.0.7.md  release.0.0.0.9.md
samples/: Dockerfile  WorkerSample.sln
samples/ClientSamlpe/: ClientSamlpe.csproj  JsonExtension.cs  Program.cs  WorkerProcessSample.csproj
samples/MessageClientSample/: MessageClientSample.csproj  Program.cs
samples/ProcessBin/: ClientSamlpe.deps.json
samples/WorkerSample/: Program.cs  WorkerSample.csproj
samples/dotnet_samples/: Dockerfile  WorkerSample.sln
samples/python_sample/: worker.py
src/: MessageWorkerPool.sln
src/Examples/: DotNetWorker.sln
src/MessageWorkerPool.Kafka/: KafkaMqWorker.cs  (+3 more)
(+209 files in other folders)
