[package]
name = "ClientSample"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
interprocess = "1.2.1"

[profile.dev]
opt-level = 0
debug = true
